Committing changes for Splash Screen

--- a/ExpenseReport/AndroidManifest.xml
+++ b/ExpenseReport/AndroidManifest.xml
@@ -11,16 +11,22 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
+        android:label="@string/login_screen"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.example.expensereport.MainActivity"
-            android:label="@string/app_name" >
+            android:name="com.example.expensereport.SplashActivity"
+            android:label="@string/login_screen"
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+ 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="com.example.expensereport.MainActivity"
+            android:label="@string/login_screen" >
         </activity>
     </application>
 
