--- a/ExpenseReport/AndroidManifest.xml
+++ b/ExpenseReport/AndroidManifest.xml
@@ -11,11 +11,11 @@
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/login_screen"
+        android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="com.example.expensereport.SplashActivity"
-            android:label="@string/login_screen"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Black.NoTitleBar" >
             <intent-filter>
@@ -28,6 +28,10 @@
             android:name="com.example.expensereport.MainActivity"
             android:label="@string/login_screen" >
         </activity>
-    </application>
+        <activity
+            android:name="com.example.expensereport.RegisterActivity"
+            android:label="Registration" >
+        </activity>
+        </application>
 
 </manifest>
