--- a/ExpenseReport/AndroidManifest.xml
+++ b/ExpenseReport/AndroidManifest.xml
@@ -5,7 +5,7 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
+        android:minSdkVersion="18"
         android:targetSdkVersion="19" />
 
     <application
@@ -33,7 +33,7 @@
             android:label="Registration" >
         </activity>
          <activity
-            android:name="com.example.expensereport.ReportsActivity"
+            android:name="com.example.expensereport.ReportActivity"
             android:label="Reports" >
         </activity>
         </application>
